--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="assets/css/responsive.css">
         <link rel="stylesheet" href="test.css">
 
-        <title>Zelda - eSports & Gaming Template</title>
+        <title>Home | AHS Esports Club</title>
 
         <link rel="icon" type="image/png" href="assets/img/favicon.png">
     </head>
@@ -276,7 +276,7 @@
                     <div class="search-overlay-form">
                         <div class="contact-form">
                             <h2 style='font-size: 48px;text-align: center;'>Contact AHS Esports</h2>
-                            <form id="contactForm">
+                            <form data-netlify="true" id="contactForm">
                                 <div class="row">
                                     <div class="col-lg-12 col-md-6">
                                         <div class="form-group">
@@ -881,7 +881,7 @@
                 <div class="subscribe-inner ptb-100 jarallax" data-jarallax='{"speed": 0.3}'>
                     <span class="sub-title">Get Updates</span>
                     <h2>Zelda Newsletter</h2>
-                    <form class="newsletter-form" data-toggle="validator">
+                    <form data-netlify="true" class="newsletter-form" data-toggle="validator">
                         <label><i class="flaticon-null-1"></i></label>
                         <input type="text" class="input-newsletter" placeholder="Enter your email address" name="EMAIL" required autocomplete="off">
                         <button type="submit" class="default-btn">Subscribe Now</button>
@@ -993,7 +993,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6 col-sm-5">
-                        <p><i class='bx bx-copyright'></i>2020 <a href="index.html">Zelda</a> games Pty Ltd.</p>
+                        <p><i class='bx bx-copyright'></i>2022 <a href="index.html"> AHS Esports Club </a> American High</p>
                     </div>
 
                     <div class="col-lg-6 col-md-6 col-sm-7">
