--- a/index.html
+++ b/index.html
@@ -306,13 +306,8 @@
                                         </div>
                                     </div>                                            
                                     <div class="col-lg-12 col-md-12">
-                                        <button style='position:initial;border-radius: 0px; margin-top: 10px;width: 100%; line-height: 17px;
-    background-color: white;
-    color: var(--blackColor);' type="submit" class="default-btn">Send Message</button>
-                                        <div id="msgSubmit" class="h3 text-center hidden"></div>
-                                        <div class="clearfix"></div>
+                                        <button style='position:initial;border-radius: 0px; margin-top: 10px;width: 100%; line-height: 17px; background-color: white; color: var(--blackColor);' type="submit" class="default-btn">Send Message</button>
                                     </div>
-                                </div>
                                 </div>
                             </form>
                         </div>
