--- a/index.html
+++ b/index.html
@@ -303,10 +303,8 @@
                                         <div class="form-group">
                                             <textarea name="message" id="message" cols="30" rows="5" required data-error="Please enter your message" placeholder="Write your message..."></textarea>
                                             <div class="help-block with-errors"></div>
-                                        </div>
-                                    </div>                                            
-                                    <div class="col-lg-12 col-md-12">
-                                        <button style='position:initial;border-radius: 0px; margin-top: 10px;width: 100%; line-height: 17px; background-color: white; color: var(--blackColor);' type="submit" class="default-btn">Send Message</button>
+                
+                                        <button type="submit" style='position:initial;border-radius: 0px; margin-top: 10px;width: 100%; line-height: 17px; background-color: white; color: var(--blackColor);' class="default-btn">Send Message</button>
                                     </div>
                                 </div>
                             </form>
