--- a/index.html
+++ b/index.html
@@ -301,10 +301,12 @@
 
                                     <div class="col-lg-12 col-md-12">
                                         <div class="form-group">
-                                            <textarea name="message" id="message" cols="30" rows="5" required data-error="Please enter your message" placeholder="Write your message..."></textarea>
+                                            <input name="message" id="message" cols="30" rows="5" required data-error="Please enter your message" placeholder="Write your message..."></input>
                                             <div class="help-block with-errors"></div>
-                
-                                        <button type="submit" style='position:initial;border-radius: 0px; margin-top: 10px;width: 100%; line-height: 17px; background-color: white; color: var(--blackColor);' class="default-btn">Send Message</button>
+                                        </div>
+                                    </div>                                            
+                                    <div class="col-lg-12 col-md-12">
+                                        <button type="submit"; style='position:initial;border-radius: 0px; margin-top: 10px;width: 100%; line-height: 17px; background-color: white; color: var(--blackColor);' class="default-btn">Send Message</button>
                                     </div>
                                 </div>
                             </form>
