--- a/index.html
+++ b/index.html
@@ -282,31 +282,19 @@
                                         <div class="form-group">
                                             <input type="text" name="name" id="name" required data-error="Please enter your name" placeholder="Your name">
                                             <div class="help-block with-errors"></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-12 col-md-6">
-                                        <div class="form-group">
+<br>
                                             <input type="email" name="email" id="email" required data-error="Please enter your email" placeholder="Your email address">
                                             <div class="help-block with-errors"></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-12 col-md-12">
-                                        <div class="form-group">
+<br>
                                             <input type="text" name="phone_number" id="phone_number" required data-error="Please enter your phone number" placeholder="Your phone number">
                                             <div class="help-block with-errors"></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-12 col-md-12">
-                                        <div class="form-group">
-                                            <input name="message" id="message" cols="30" rows="5" required data-error="Please enter your message" placeholder="Write your message..."></input>
+<br>
+                                            <textarea name="message" id="message" cols="30" rows="5" required data-error="Please enter your message" placeholder="Write your message..."></textarea>
                                             <div class="help-block with-errors"></div>
+<br> 
+                                            <button type="submit"; style='position:initial;border-radius: 0px; margin-top: 10px;width: 100%; line-height: 17px; background-color: white; color: var(--blackColor);' class="default-btn">Send Message</button>
+                                            </div>
                                         </div>
-                                    </div>                                            
-                                    <div class="col-lg-12 col-md-12">
-                                        <button type="submit"; style='position:initial;border-radius: 0px; margin-top: 10px;width: 100%; line-height: 17px; background-color: white; color: var(--blackColor);' class="default-btn">Send Message</button>
                                     </div>
                                 </div>
                             </form>
