--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
                 <div class="subscribe-inner ptb-100 jarallax" data-jarallax='{"speed": 0.3}'>
                     <span class="sub-title">Get Updates</span>
                     <h2>Zelda Newsletter</h2>
-                    <form data-netlify="true" class="newsletter-form" data-toggle="validator">
+                    <form data-netlify="true" name="newsletterForm" class="newsletter-form" data-toggle="validator">
                         <label><i class="flaticon-null-1"></i></label>
                         <input type="text" class="input-newsletter" placeholder="Enter your email address" name="EMAIL" required autocomplete="off">
                         <button type="submit" class="default-btn">Subscribe Now</button>
